# opengl-in-a-nutshell

./: CMakeLists.txt  readme.md
clear_screen/: CMakeLists.txt
clear_screen/src/: main.cpp
colored_triangle/: CMakeLists.txt
colored_triangle/src/: main.cpp
depth_test/: CMakeLists.txt
depth_test/src/: main.cpp
hello_triangle/: CMakeLists.txt
hello_triangle/src/: main.cpp
indexed_quad/: CMakeLists.txt
indexed_quad/src/: main.cpp
load_texture/: CMakeLists.txt
load_texture/src/: main.cpp
matrix2d/: CMakeLists.txt
matrix2d/src/: main.cpp
matrix3d/: CMakeLists.txt
matrix3d/src/: main.cpp
perspective/: CMakeLists.txt
perspective/src/: main.cpp
texture/: CMakeLists.txt
texture/src/: main.cpp
uniform_buffer_triangle/: CMakeLists.txt
uniform_buffer_triangle/src/: main.cpp
uniform_triangle/: CMakeLists.txt
uniform_triangle/src/: main.cpp
vertex_arrays_triangle/: CMakeLists.txt
vertex_arrays_triangle/src/: main.cpp
window/: CMakeLists.txt
window/src/: main.cpp
